fixed hero responsive alignment

--- a/components/Contact-Form/styles.module.scss
+++ b/components/Contact-Form/styles.module.scss
@@ -18,7 +18,7 @@
         padding-left: 35px;
         padding-right: 35px;
         background-color: $accent2;
-        border: none;
+        border: solid 1px $accent2;
         color: white;
         border-radius: 5px;
     }
