--- a/components/Hero/styles.module.scss
+++ b/components/Hero/styles.module.scss
@@ -9,7 +9,7 @@
 .main{
     margin: 0 8vw;
     @include respond-below(sm){
-        margin: 0 2vw;
+        margin: 0 4vw;
     }
     color: white;
     padding-top: 50px;
